force-app/main/default/objects/PBS_AAAP_Rate__c/PBS_AAAP_Rate__c.object-meta.xml
<CustomObject>
    <description>AAAP - This object contains Rate information associated with a specific space in a AAAP Offer. These rates will be visible to all end-users.</description>
    <label>Rate</label>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>