force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_ADDTL_AMT_DAY_CLEANING__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ADDTL_AMT_DAY_CLEANING__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The additional amount per ABOA for Daytime Cleaning.</description>
    <label>Additional Amount for Daytime Cleaning</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>