force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_AMORTIZ_RATE_T1_ABOVE_20__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AMORTIZ_RATE_T1_ABOVE_20__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amortized Rate T1 over T20</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>