force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_AMORTIZ_RATE_T1_UPTO_20__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_AMORTIZ_RATE_T1_UPTO_20__c</fullName>
    <label>TI Amortized Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>