force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_ANNUAL_AMORT_TI_COSTS__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ANNUAL_AMORT_TI_COSTS__c</fullName>
    <label>Annual Amortized TI Rate per ABOA SF</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>