force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_BASE_COST_SRVC_UTIL_PER_ABOA__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BASE_COST_SRVC_UTIL_PER_ABOA__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Total Operating Costs per ABOA SF</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>