force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_BASE_RATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BASE_RATE__c</fullName>
    <description>Base rate per ANSI/BOMA Office Area square foot (ABOA) for the Warm-Lit Shell (excluding the cost of tenant improvements, services and utilities.</description>
    <label>Shell Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>