force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_BSAC__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC__c</fullName>
    <label>Annual Amortized BSAC Rate per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>