force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_BSAC_RATE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_BSAC_RATE__c</fullName>
    <label>BSAC Amortized Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>