force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_COOP_COMM_TOGSA_FIRM_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COOP_COMM_TOGSA_FIRM_TERM__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The cooperating brokerage commission available to
the Government&apos;s representative, as a percentage of the
full-service rents (including amortization of $38.95 of T.I.)
to be paid over the Firm Term.</description>
    <label>Free Rent as a % of the FS rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>