force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_COST_FOR_TI__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_COST_FOR_TI__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The annual cost to amortize the Tenant Improvements
allowance of $38.95 per ABOA. Such amortization is to be
compounded monthly over the INITIAL term of the lease.</description>
    <label>Cost for TI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>