force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_EXTERNAL_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_EXTERNAL_ID__c</fullName>
    <description>External ID is a concatenation of ACCOUNT_NUMBER, IDENTIFIER_ID, LEASE_TERM</description>
    <externalId>true</externalId>
    <label>PBS_AAAP_EXTERNAL_ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>