force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_FULL_SERV_RENT_OPTION_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_FULL_SERV_RENT_OPTION_TERM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Option Term</description>
    <label>Soft Term Shell Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>