force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_FULLY_SRVC_FIRM_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_FULLY_SRVC_FIRM_TERM__c</fullName>
    <label>Total Initial Term Rent per ABOA SF</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>