force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_IDENTIFIER_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_IDENTIFIER_ID__c</fullName>
    <label>Identifier ID</label>
    <length>22</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>