force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_NO_OF_MONTHS_FREE_FIRM_TERM__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_NO_OF_MONTHS_FREE_FIRM_TERM__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of months of free rent without any payment
of base rent, operating expenses, or amortization of $38.95
per ABOA of initial term Tenant Improvements plus
construction markups.   -- FIRM TERM --</description>
    <label>Firm Term Free Months</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>