force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_OFFER_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OFFER_NUMBER__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The offer number to which this rate record is associated.</description>
    <label>Offer Number</label>
    <referenceTo>PBS_AAAP_Offer__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <type>Lookup</type>
</CustomField>