force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_ONE_YEAR_EXTENSION__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_ONE_YEAR_EXTENSION__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>One Year Extension</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>