force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_OT_RATE_COOLING_HEAT__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_OT_RATE_COOLING_HEAT__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The overtime rate for heating and cooling beyond
normal hours specified in RLP.</description>
    <label>HVAC Overtime Rate per Hour</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>