force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_PV_Value__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PV_Value__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field contains the value generated by calculating the present value of the space with the rate and cost data specified in the offer.</description>
    <label>Present Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>