force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_PV_Value_Blended__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_PV_Value_Blended__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>This field contains the value calculated for the &quot;blended&quot; present value rate between the regular  PV rate and the PV rate for the option term.  This field is only calculated for the 5 year lease term with a 5 year option rate record.</description>
    <label>PV Value (Blended)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>