force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_SPACE__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_SPACE__c</fullName>
    <label>Space</label>
    <referenceTo>PBS_AAAP_Space__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>