force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Street_Address__c</fullName>
    <formula>PBS_AAAP_OFFER_NUMBER__r.PBS_AAAP_Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Address</label>
    <type>Text</type>
</CustomField>