force-app/main/default/objects/PBS_AAAP_Rate__c/fields/PBS_AAAP_Vacant_Premise_Rate__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Vacant_Premise_Rate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Adj for Vacant Premises Rate per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>