force-app/main/default/objects/PBS_AAAP_Rate__c/fields/RateExternalId__c.field-meta.xml
<CustomField>
    <fullName>RateExternalId__c</fullName>
    <externalId>true</externalId>
    <label>RateExternalId</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>