force-app/main/default/objects/PBS_AAAP_Rate__c/fields/Rent_for_Non_Standard_Circumstances__c.field-meta.xml
<CustomField>
    <fullName>Rent_for_Non_Standard_Circumstances__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Non-Standard Circumstances per ABOA SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>