force-app/main/default/objects/PBS_AAAP_Rate__c/fields/Space_Offer__c.field-meta.xml
<CustomField>
    <fullName>Space_Offer__c</fullName>
    <formula>PBS_AAAP_SPACE__c +  PBS_AAAP_OFFER_NUMBER__c</formula>
    <label>Space Offer</label>
    <type>Text</type>
</CustomField>